<resources>
    <string name="app_name2">App Manager</string>
    <string name="searchs">Search</string>
    <string name="your_name">Your Name</string>
    <string name="your_gmail_account">Your gmail account</string>
    <string name="edit_your_information">Edit your information</string>
    <string name="airplane_mode">Airplane Mode</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="your_device_does_not_support_this_feature">Your device does not support this feature</string>
    <string name="personal_hotspot">Personal Hotspot</string>
    <string name="all_app_settings">All app settings</string>
    <string name="languages_settings">Languages settings</string>
    <string name="accessibility">Accessibility</string>
    <string name="sound">Sound</string>
    <string name="biometric_enroll">Biometric enroll</string>
    <string name="location">Location</string>
    <string name="storage_settings">Storage settings</string>
    <string name="device_information">Device information</string>
    <string name="general">General</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="cellular">Cellular</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="vpn">VPN</string>
    <string name="display_and_brightness">Display and brightness</string>
    <string name="video_cast">Video cast</string>
    <string name="install_unknown_apps">Install unknown apps</string>
    <string name="auto_rotate">Auto rotate</string>
    <string name="add_account">Add account</string>
    <string name="all_files_access">All files access</string>
    <string name="battery_optimization">Battery optimization</string>
    <string name="default_apps_settings">Default apps settings</string>
    <string name="input_method">Input method</string>
    <string name="input_method_subtype">Input method subtype</string>
    <string name="modify_system_settings">Modify system settings</string>
    <string name="nfc_setttings">NFC settings</string>
    <string name="nfc_paymment">NFC payment</string>
    <string name="night_display">Night display</string>
    <string name="notification_access">Notification Access</string>
    <string name="notification_assitant">Notification assistant</string>
    <string name="notification_policy_access">Notification Policy Access</string>
    <string name="app_search_settings">App search settings</string>
    <string name="print_settings">Print settings</string>
    <string name="overlay_permission">Overlay permission</string>
    <string name="data_usage">Data usage</string>
    <string name="personal_dictionary">Personal dictionary</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="developer_mode">Developer mode</string>
    <string name="quick_launch_settings">Quick launch settings</string>
    <string name="exta_alarm">Exact Alarm Scheduling</string>
    <string name="settingxl">Settings</string>
    <string name="yesx">Yes</string>
    <string name="nox">No</string>
    <string name="ACTION_REQUEST_MANAGE_MEDIA2">Media File Permission</string>
    <string name="rate_5start">Please rate app 5 stars, Thank you so much!!</string>
    <string name="rate_4start">I have acknowledged your feedback,Thank you</string>
    <string name="no_star">Please select the star above to rate the application</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="if_you_like_app_please_rate_5_star">If you like app, please rate 5 star</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="auto">Auto</string>
    <string name="lightmode_comming_soon">Display</string>
    <string name="share_app">Share app</string>
    <string name="feed_back">Feedback</string>
    <string name="rm_ads">Remove ads</string>
    <string name="set_full_screen">Set full screen</string>
    <string name="more_ios_app_from_us">More iOS app</string>
    <string name="reset_upate">Restart app to update</string>
    <string name="share_via">Share via</string>
    <string name="date_settings">Date &amp; time</string>
    <string name="ACTION_ACCESSIBILITY_SETTINGS">Accessibility Settings</string>
    <string name="ACTION_ADD_ACCOUNT">Add Account</string>
    <string name="ACTION_ADS_SETTINGS">Ads Settings</string>
    <string name="ACTION_AIRPLANE_MODE_SETTINGS">Airplane Mode Settings</string>
    <string name="ACTION_APN_SETTINGS">APN Settings</string>
    <string name="ACTION_APPLICATION_DETAILS_SETTINGS">Application Details Settings</string>
    <string name="ACTION_APPLICATION_DEVELOPMENT_SETTINGS">Developer Options Settings</string>
    <string name="ACTION_APPLICATION_SETTINGS">Application Settings</string>
    <string name="ACTION_APP_NOTIFICATION_BUBBLE_SETTINGS">App Notification Bubble Settings</string>
    <string name="ACTION_APP_NOTIFICATION_SETTINGS">App Notification Settings</string>
    <string name="ACTION_APP_OPEN_BY_DEFAULT_SETTINGS">App Open By Default Settings</string>
    <string name="ACTION_APP_SEARCH_SETTINGS">App Search Settings</string>
    <string name="ACTION_APP_USAGE_SETTINGS">App Usage Settings</string>
    <string name="ACTION_AUTO_ROTATE_SETTINGS">Auto Rotate Settings</string>
    <string name="ACTION_BATTERY_SAVER_SETTINGS">Battery Saver Settings</string>
    <string name="ACTION_BIOMETRIC_ENROLL">Biometric Enroll</string>
    <string name="ACTION_BLUETOOTH_SETTINGS">Bluetooth Settings</string>
    <string name="ACTION_CAPTIONING_SETTINGS">Video Captioning Settings</string>
    <string name="ACTION_CAPTIONING_SETTINGS2">Video Captioning</string>
    <string name="ACTION_CAST_SETTINGS">Video Cast Settings</string>
    <string name="ACTION_CONDITION_PROVIDER_SETTINGS">Condition Provider Settings</string>
    <string name="ACTION_CONDITION_PROVIDER_SETTINGS2">Condition Provider</string>
    <string name="ACTION_DATA_ROAMING_SETTINGS">Data Roaming Settings</string>
    <string name="ACTION_DATA_USAGE_SETTINGS">Data Usage Settings</string>
    <string name="ACTION_DATE_SETTINGS">Date Settings</string>
    <string name="ACTION_DEVICE_INFO_SETTINGS">Device Information Settings</string>
    <string name="ACTION_DISPLAY_SETTINGS">Display Settings</string>
    <string name="ACTION_DREAM_SETTINGS">Screen Saver Settings</string>
    <string name="ACTION_FINGERPRINT_ENROLL">Fingerprint Enroll</string>
    <string name="ACTION_HARD_KEYBOARD_SETTINGS">Physical Keyboard Settings</string>
    <string name="ACTION_HOME_SETTINGS">Default Home App Settings</string>
    <string name="ACTION_HOME_SETTINGS2">Default Home App</string>
    <string name="ACTION_IGNORE_BACKGROUND_DATA_RESTRICTIONS_SETTINGS">Background Data Restrictions Settings</string>
    <string name="ACTION_IGNORE_BATTERY_OPTIMIZATION_SETTINGS">Battery Optimization Settings</string>
    <string name="ACTION_INPUT_METHOD_SETTINGS">Input Method Settings</string>
    <string name="ACTION_INPUT_METHOD_SUBTYPE_SETTINGS">Input Method Subtype Settings</string>
    <string name="ACTION_INTERNAL_STORAGE_SETTINGS">Storage Settings</string>
    <string name="ACTION_LOCALE_SETTINGS">Language Settings</string>
    <string name="ACTION_LOCATION_SOURCE_SETTINGS">Location Settings</string>
    <string name="ACTION_MAINLINE_UPDATER">Android Essential Module Update</string>
    <string name="ACTION_MANAGE_ALL_APPLICATIONS_SETTINGS">All Applications Settings</string>
    <string name="ACTION_MANAGE_ALL_FILES_ACCESS_PERMISSION">All Files Access Permission Settings</string>
    <string name="ACTION_MANAGE_ALL_SIM_PROFILES_SETTINGS">SIM Profiles Settings</string>
    <string name="ACTION_MANAGE_APPLICATIONS_SETTINGS">Applications Settings</string>
    <string name="ACTION_MANAGE_DEFAULT_APPS_SETTINGS">Default Apps Settings</string>
    <string name="ACTION_MANAGE_OVERLAY_PERMISSION">Overlay Permission Settings</string>
    <string name="ACTION_MANAGE_UNKNOWN_APP_SOURCES">Install Unknown Apps Settings</string>
    <string name="ACTION_MANAGE_WRITE_SETTINGS">Modify System Settings</string>
    <string name="ACTION_MEMORY_CARD_SETTINGS">SD Card Storage Settings</string>
    <string name="ACTION_NETWORK_OPERATOR_SETTINGS">Network Operator Settings</string>
    <string name="ACTION_NFCSHARING_SETTINGS">NFC Sharing Settings</string>
    <string name="ACTION_NFC_PAYMENT_SETTINGS">NFC Payment Settings</string>
    <string name="ACTION_NFC_SETTINGS">NFC Settings</string>
    <string name="ACTION_NIGHT_DISPLAY_SETTINGS">Night Display Settings</string>
    <string name="ACTION_NOTIFICATION_ASSISTANT_SETTINGS">Notification Assistant Settings</string>
    <string name="ACTION_NOTIFICATION_LISTENER_SETTINGS">Notification Access Settings</string>
    <string name="ACTION_NOTIFICATION_POLICY_ACCESS_SETTINGS">Notification Policy Access Settings</string>
    <string name="ACTION_PRINT_SETTINGS">Print Settings</string>
    <string name="ACTION_PRIVACY_SETTINGS">Privacy Settings</string>
    <string name="ACTION_QUICK_ACCESS_WALLET_SETTINGS">Quick Access Wallet Settings</string>
    <string name="ACTION_QUICK_LAUNCH_SETTINGS">Quick Launch Settings</string>
    <string name="ACTION_REQUEST_MANAGE_MEDIA">Media File Permission Settings</string>
    <string name="ACTION_REQUEST_SCHEDULE_EXACT_ALARM">Exact Alarm Scheduling Settings</string>
    <string name="ACTION_REQUEST_SET_AUTOFILL_SERVICE">Autofill Service Settings</string>
    <string name="ACTION_SEARCH_SETTINGS">Search Settings</string>
    <string name="ACTION_SECURITY_SETTINGS">Security Settings</string>
    <string name="ACTION_SETTINGS">System Settings</string>
    <string name="ACTION_SHOW_REGULATORY_INFO">Regulatory Information Settings</string>
    <string name="ACTION_SHOW_WORK_POLICY_INFO">Work Policy Information Settings</string>
    <string name="ACTION_SOUND_SETTINGS">Sound Settings</string>
    <string name="ACTION_STORAGE_VOLUME_ACCESS_SETTINGS">Storage Volume Access Settings</string>
    <string name="ACTION_SYNC_SETTINGS">Sync Settings</string>
    <string name="ACTION_USAGE_ACCESS_SETTINGS">Usage Access Settings</string>
    <string name="ACTION_USER_DICTIONARY_SETTINGS">Personal Dictionary Settings</string>
    <string name="ACTION_VOICE_INPUT_SETTINGS">Voice Input Settings</string>
    <string name="ACTION_VPN_SETTINGS">VPN Settings</string>
    <string name="ACTION_VR_LISTENER_SETTINGS">VR Settings</string>
    <string name="ACTION_WEBVIEW_SETTINGS">WebView Settings</string>
    <string name="ACTION_WIFI_IP_SETTINGS">Wi-Fi IP Settings</string>
    <string name="ACTION_WIFI_SETTINGS">Wi-Fi Settings</string>
    <string name="ACTION_WIRELESS_SETTINGS">Wireless Settings</string>
    <string name="ACTION_ZEN_MODE_PRIORITY_SETTINGS">Zen Mode Priority Settings</string>
    <string name="ACTION_ZEN_MODE_PRIORITY_SETTINGS2">Zen Mode Priority</string>
    <string name="sd_card_storage">SD Card Storage</string>
    <string name="sim_profiles">SIM profiles</string>
    <string name="cancel">Cancel</string>
    <string name="suggest">Suggest</string>
    <string name="signature">Signature</string>
    <string name="your_information">Your information</string>
    <string name="home">Home</string>
    <string name="loading_content">Loading content...</string>
    <string name="buy_now">Buy Now</string>
    <string name="remove_ads_forever">+Remove ADS forever</string>
    <string name="speed_up_more_fonts">+ Speed up for app</string>
    <string name="just_pay_one_time_only_and_use_forever">+Just pay one time only and use forever</string>
    <string name="not_subscription_is_required_to_use">+ Not subscription is required to use</string>
    <string name="im_sj_hp">I\'m so happy when you love this application. Please upgrade to the pro version for the best experience, as well as help us with have the cost to operate, thanks you so much</string>
    <string name="add_profile_picture">Add profile picture</string>
    <string name="back">Back</string>
</resources>