<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="isLight"
            type="Boolean" />
    </data>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_radius"
        setViewBackgroundZone="@{isLight}"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/titleDialog"
               android:fontFamily="@font/font"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/data_usage"
                android:textColor="@color/main_color" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_25sdp">

            <TextView
                android:id="@+id/tvNo"
                android:layout_width="0dp"
                setTextColor="@{isLight}"

                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="center"
                android:fontFamily="@font/font"
                android:textSize="@dimen/_13ssp"
                android:text="@string/nox"
                android:textColor="@color/black" />

            <TextView
                setTextColor="@{isLight}"
                android:id="@+id/tvYes"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:fontFamily="@font/font"
                android:textSize="@dimen/_13ssp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/yesx"
                android:textColor="@color/black" />
        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>