<?xml version="1.0" encoding="utf-8"?>
<layout>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:overScrollMode="never"
    android:scrollbarSize="3dp"
    android:scrollbarThumbVertical="@drawable/thumb"
    android:background="#C5C3C3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".screen.setting.RemoveADfr"
        android:background="@color/bg3"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/check_damua"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="@dimen/_25ssp"
                android:textColor="@color/main_color"
                android:fontFamily="@font/font"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pro Version" />
            <TextView
                android:gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_14ssp"
                android:textColor="#ffffff"
                android:fontFamily="@font/font"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/im_sj_hp" />
            <TextView
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="#FF9100"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="@font/font"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_ads_forever" />

            <TextView
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_14ssp"
                android:textColor="#FF9100"
                android:fontFamily="@font/font"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speed_up_more_fonts" />

            <TextView
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_15ssp"
                android:textColor="#E48F1F"
                android:fontFamily="@font/font"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/just_pay_one_time_only_and_use_forever" />
            <TextView
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_15ssp"
                android:textColor="#E48F1F"
                android:fontFamily="@font/font"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_subscription_is_required_to_use" />

            <TextView
                android:id="@+id/price_piap"
                android:textSize="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:textColor="@color/main_color"
                android:text="1,49$"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:background="@drawable/line"
                android:id="@+id/price_piap_fake"
                android:textSize="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/main_color"
                android:text="3,49$"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:textStyle="bold"
            android:fontFamily="@font/font"
            android:id="@+id/btn_buy"
            android:layout_width="wrap_content"
            android:paddingHorizontal="@dimen/_50sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:background="@drawable/background_dark_radius"
            android:backgroundTint="@color/main_color"
            android:text="@string/buy_now"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            />


        <TextView
            android:layout_marginBottom="@dimen/_65sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:textSize="@dimen/_12ssp"
            android:textColor="#ffffff"
            android:text="About the Pro version:\n\n
Using an application without ads will provide a better experience, which is also the best way for you to supportthe developer\n\n

In this Pro version:\n\n
- You only need to buy once and have permanent effect Ads will not appear forever\n\n

- Speed up the application experience.\n\n

- Add more features\n\n

Note:\n\n

- You do not need to buy this ad removal pack to beable to use the app (this is not required) About refund:- We will refund in case of error from the developer\n\n

- Application after purchase has an error occurred and you can not use.\n\n

- The application has a serious impact on your system (this is almost impossible)\n\n

To refund:\n\n

1. Please send the Invoice Number with your photo (in the email sent to you by google play).\n\n

2. Reason for refund. And send it to our email vunhiem96@gmail.com.After reviewing your issue, we will take steps to get a refund in accordance with Google Play rules. The refund will go directly to your Google Play account, which can take up to 7 business days.\n\n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
</layout>