<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/root_dl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:background="@drawable/background_dialog">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:fontFamily="@font/font"
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/your_information"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />


            <EditText
                android:fontFamily="@font/font"
                android:id="@+id/edtPasscode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/background_edt_dialog"
                android:hint="@string/your_name"
                android:padding="@dimen/_8sdp"
                android:textColor="#000000"
                android:textColorHint="#959595"
                android:textCursorDrawable="@drawable/cursor_drawble"
                android:textSize="@dimen/_12ssp"
                android:theme="@style/Edittext" />

            <EditText
                android:fontFamily="@font/font"
                android:id="@+id/edtRePasscode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_edt_dialog"
                android:hint="@string/signature"
                android:padding="@dimen/_8sdp"
                android:textColor="#000000"
                android:textColorHint="#959595"
                android:textCursorDrawable="@drawable/cursor_drawble"
                android:textSize="@dimen/_12ssp"
                android:theme="@style/Edittext" />





            <View
                android:layout_marginTop="@dimen/_25sdp"
                android:id="@+id/view1_dl"
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:background="#b2b2b2" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/view2_dl"
                    android:layout_width="0.6dp"
                    android:layout_height="@dimen/_44sdp"
                    android:layout_centerHorizontal="true"
                    android:background="#b0b0b0" />

                <TextView
                    android:fontFamily="@font/font"
                    android:id="@+id/tvCancel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_44sdp"
                    android:layout_toStartOf="@id/view2_dl"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:fontFamily="@font/font"
                    android:id="@+id/tvOk"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_44sdp"
                    android:layout_toEndOf="@id/view2_dl"
                    android:gravity="center"
                    android:text="OK"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/_13ssp" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>